objects/Licensed_Products__c.object
<CustomObject>
    <label>Licensed Products</label>
    <nameField>
        <label>Software Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Licensed Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Qty__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Qty</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MatNum__c</fullName>
        <label>MatNum</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <formula>Invoiced_Amt__c - Total_List__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$ Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SAP_Order__c</fullName>
        <label>SAP Order</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_List__c</fullName>
        <label>Unit List</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order_Date__c</fullName>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMA_Status__c</fullName>
        <label>SMA Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACTIVE</fullName>
                </value>
                <value>
                    <fullName>EXPIRED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_List__c</fullName>
        <formula>Qty__c * Unit_List__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total List</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoiced_Amt__c</fullName>
        <label>Invoiced Amt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Master_Asset_Name__c</fullName>
        <label>Master Asset Name</label>
        <referenceTo>Asset</referenceTo>
        <relationshipName>Related_Asset_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
</CustomObject>